íã카테고리 ìd에 ë리에따리에 따른 수리스트 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
-.gradle
+.gradle/
+.idea/
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,3 +14,12 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+
+.tmp/
+native/
+wrapper/
+jdks/
+daemon/
+caches/
+android/
