--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -33,29 +34,29 @@
 
 
         <activity android:name=".ui.notifications.login"
-            android:exported="false"
+            android:exported="true"
             android:parentActivityName=".MainActivity"/>
 
 
         <activity android:name=".ui.notifications.join"
-            android:exported="false"
+            android:exported="true"
             android:parentActivityName=".ui.notifications.login">
         </activity>
-        <activity android:name=".zzim">
-
+        <activity android:name=".zzim"
+            android:exported="true">
         </activity>
-        <activity android:name=".search">
-
+        <activity android:name=".search"
+            android:exported="true">
         </activity>
-        <activity android:name=".item.ProductListActivity">
-
+        <activity android:name=".item.ProductListActivity"
+            android:exported="true">
         </activity>
-        <activity android:name=".item.ProductActivity">
-
+        <activity android:name=".item.ProductActivity"
+            android:exported="true">
         </activity>
-        <activity android:name=".item.AddProductActivity">
-
-        </activity>
+        <activity android:name=".item.AddProductActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"/>
 
     </application>
 
