--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity android:name=".search"
             android:exported="true">
         </activity>
+        <activity android:name=".ui.mypage.CartActivity"
+            android:exported="true">
+        </activity>
         <activity android:name=".item.ProductListActivity"
             android:exported="true">
         </activity>
